MenuData, se realizo map para menu

--- a/src/stylos/header.css
+++ b/src/stylos/header.css
@@ -15,6 +15,10 @@
 }
 .menu__nav {
   padding-inline: 1em;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
 }
 .menu__nav > * {
   margin-left: 15px;
