--- a/src/stylos/header.scss
+++ b/src/stylos/header.scss
@@ -17,11 +17,12 @@
 
     &__nav {
         padding-inline: 1em;
+        
+        @include flex(row wrap, center, center);
       
     }
 
     &__nav > * {
         margin-left: 15px;
     }
-
 }
