--- a/src/stylos/header.css
+++ b/src/stylos/header.css
@@ -1,4 +1,8 @@
 .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
