--- a/src/stylos/header.scss
+++ b/src/stylos/header.scss
@@ -1,6 +1,10 @@
 @import './abstract/mixin.scss';
 
 .menu {
+    position:fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     @include flex(row nowrap, space-between, center);
     background-color: $clr-accent;
     
